--- a/client/src/Components/ProfileMenu/ProfileMenu.scss
+++ b/client/src/Components/ProfileMenu/ProfileMenu.scss
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   &__pfp {
-    background-color: black;
     height: 234px;
     width: 234px;
     border-radius: 50%;
+    object-position: center;
   }
 
   &__username {
