--- a/client/src/Components/ProfileContent/ProfileContent.scss
+++ b/client/src/Components/ProfileContent/ProfileContent.scss
@@ -6,10 +6,8 @@
   &__content-section {
     width: 100%;
     min-height: 500px;
-    background-color: #f2f2f2;
+    height: 500px;
     margin-top: 4rem;
     display: flex;
-    justify-content: center;
-    align-items: center;
   }
 }
