--- a/client/src/Components/Stats/Stats.scss
+++ b/client/src/Components/Stats/Stats.scss
@@ -3,4 +3,11 @@
   width: 100%;
   height: 100%;
   background-color: #f2f2f2;
+  overflow: scroll;
+
+  &__top-artists-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+  }
 }
