--- a/client/src/Components/AccordionItem/AccordionItem.scss
+++ b/client/src/Components/AccordionItem/AccordionItem.scss
@@ -1,15 +1,26 @@
 .accordion {
-    background-color: blue;
-    min-width: 70vw;
+    background-color: #323232;
+    // min-width: 80vw;
     // height: 90vh;
-    color: white;
     padding-left: 16px;
     padding-right: 16px;
+    margin-bottom: 24px;
+    margin-top: 24px;
+    &__header-wrapper{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
     &__header{
-        background-color: red;
+        background-color: #e5e5e5;
         display: flex;
         justify-content: space-between;
-        
+        color: black;
+    }
+    &__con1{
+        // width: 100vw;
+        // flex-direction: row;
     }
     &__con2{
         min-width: 100%;
