--- a/client/src/Components/AccordionItem/AccordionItem.scss
+++ b/client/src/Components/AccordionItem/AccordionItem.scss
@@ -29,6 +29,10 @@
     &__saved-pl{
         width: 100%;
     }
+    &__pl-cover{
+        width: 60px;
+        height: 60px;
+    }
 }
 
 .my-collapse {
