--- a/client/src/Pages/Playlistgen/Playlistgen.scss
+++ b/client/src/Pages/Playlistgen/Playlistgen.scss
@@ -67,7 +67,7 @@
         font-weight: 700;
         text-transform: uppercase;
         width: 100%;
-        height: 200px;
+        height: 100%;
         margin-bottom: 24px;
     }
     &__buttons-con {
