--- a/client/src/Components/LandingGradient/LandingGradient.scss
+++ b/client/src/Components/LandingGradient/LandingGradient.scss
@@ -1,6 +1,11 @@
 .main__container {
   position: relative;
-  background: #c3adef;
+  background: linear-gradient(
+    0deg,
+    rgba(251, 250, 254, 1) 4%,
+    rgba(195, 173, 239, 1) 100%,
+    rgba(255, 255, 255, 0) 100%
+  );
   padding: 0.5rem 1rem;
   font-size: 1.2rem;
   border: none;
@@ -18,7 +23,7 @@
     top: var(--y);
     width: var(--size);
     height: var(--size);
-    background: radial-gradient(circle closest-side, #895de1, transparent);
+    background: radial-gradient(circle closest-side, #794ad7, transparent);
     transform: translate(-50%, -50%);
     transition: width 0.2s ease, height 0.2s ease;
     z-index: 0;
