--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,6 +2,7 @@
   // max-width: 1280px;
   /* margin: 0 auto;
   padding: 2rem; */
+  margin: 0;
   width: 100vw;
   max-width: 100%;
   display: flex;
