--- a/client/src/Components/LandingGradient/LandingGradient.scss
+++ b/client/src/Components/LandingGradient/LandingGradient.scss
@@ -8,7 +8,7 @@
   src: url("/fonts/circular-std-medium-500.ttf");
 }
 
-.main__container {
+.landing__container {
   position: relative;
   background: linear-gradient(
     0deg,
@@ -52,47 +52,12 @@
   position: relative;
   padding: 0rem 18rem;
   font-family: "Circular Std Bold", sans-serif;
+  margin-bottom: 0;
 }
 
 .landing__button {
   position: relative;
   margin: 0rem 18rem;
-}
-
-.landing__card {
-  width: 16.8rem;
-  height: 16.8rem;
-  background-color: white;
-  color: #4d4d4d;
-  position: relative;
-  border-radius: 5px;
-  overflow: hidden;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
-
-  &--text {
-    padding: 1rem;
-  }
-
-  &--title {
-    margin: 0;
-    background: linear-gradient(
-      90deg,
-      rgba(183, 46, 215, 1) 0%,
-      rgba(134, 75, 255, 1) 100%
-    );
-    border-radius: 20px;
-    color: white;
-    font-size: 0.75rem;
-    width: fit-content;
-    padding: 5px 10px;
-    text-align: center;
-    font-family: "Circular Std";
-    font-weight: 100;
-  }
-
-  &--body {
-    padding-left: 0.3rem;
-  }
 }
 
 .mixtape {
@@ -104,4 +69,10 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.landing__cards {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 3rem 13rem;
 }
