--- a/client/src/Components/AccordionList/AccordionList.scss
+++ b/client/src/Components/AccordionList/AccordionList.scss
@@ -1,3 +1,7 @@
 .accordion-l {
+    display: flex;
+    flex-direction: column;
     background-color: #323232;
+    flex: 1;
+    overflow-y: hidden;
 }
