--- a/client/src/Components/ProfileContent/ProfileContent.scss
+++ b/client/src/Components/ProfileContent/ProfileContent.scss
@@ -1,6 +1,12 @@
 .profile-content {
+  position: relative;
+  height: 40%;
   &__header {
+    padding-left: 16px;
+    position: absolute;
     margin: 0;
+    font-size: 80px;
+    bottom: 60px;
   }
 
   &__content-section {
@@ -11,4 +17,24 @@
     display: flex;
     flex-wrap: wrap;
   }
+}
+.hero{
+    // background-color: blue;
+    background-image: url("../../assets/Mask_group.png");
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: 100% 100%; 
+    // background-origin: content-box;
+    width: 100%;
+    height: 100%;
+    &__discovery-btn {
+        position: absolute;
+        right: 40px;
+        top: 20px;
+        border: none;
+        background-color: purple;
+    }
+    // &__right-con {
+    //     border: 1px dashed red;
+    // }
 }
