--- a/client/src/Components/ProfileMenu/ProfileMenu.scss
+++ b/client/src/Components/ProfileMenu/ProfileMenu.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: linear-gradient(180.22deg, #864BFF 0.19%, rgba(35,35,35, 0) 185.56%);
+  flex: 1;
 
   &__pfp {
     height: 234px;
