--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,7 +36,7 @@ body {
   vertical-align: baseline;
   box-sizing: border-box;
   /* overflow-y: hidden; Hide vertical scrollbar */
-  overflow-x: hidden; /* Hide horizontal scrollbar */
+  /* overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 *,
