--- a/client/src/Components/AccordionItem/AccordionItem.scss
+++ b/client/src/Components/AccordionItem/AccordionItem.scss
@@ -1,9 +1,12 @@
 .accordion {
+    // display: flex;
+    // flex-direction: column;
     background-color: #323232;
     padding-left: 75px;
     padding-right: 125px;
     // margin-bottom: px;
     margin-top: 24px;
+    overflow: hidden;
     &__header-wrapper{
         width: 100%;
         display: flex;
@@ -21,11 +24,12 @@
         // flex-direction: row;
     }
     &__con2{
-        min-width: 100%;
+        flex-basis: 90%;
+        // min-width: 100%;
         // height: 100%;
     }
     &__saved-pl{
-        width: 100%;
+        max-width: 100%;
     }
     &__pl-cover{
         width: 60px;
