--- a/client/src/Components/AccordionItem/AccordionItem.scss
+++ b/client/src/Components/AccordionItem/AccordionItem.scss
@@ -2,8 +2,9 @@
     // display: flex;
     // flex-direction: column;
     background-color: #323232;
-    padding-left: 75px;
-    padding-right: 125px;
+    // padding-left: 75px;
+    // padding-right: 125px;
+    max-width: 60vw;
     // margin-bottom: px;
     margin-top: 24px;
     overflow: hidden;
