--- a/client/src/Components/SavedPlaylists/SavedPlaylists.scss
+++ b/client/src/Components/SavedPlaylists/SavedPlaylists.scss
@@ -4,6 +4,7 @@
   &__tracklist {
       display: inline-flex;
       flex-direction: row;
+      max-width: 60vw;
       // flex: 0 0 64px;  /* don't grow, don't shrink, stay at 64px width */
   }
   &__track {
@@ -71,4 +72,9 @@
     top: 50%;
     left: 50%;
     margin: -7px 0 0 -7px;
+}
+
+.carousel {
+    max-width: 60vw;
+    flex: 0 1 0;
 }
