--- a/client/src/Components/SavedPlaylists/SavedPlaylists.scss
+++ b/client/src/Components/SavedPlaylists/SavedPlaylists.scss
@@ -4,7 +4,7 @@
   &__tracklist {
       display: inline-flex;
       flex-direction: row;
-      max-width: 60vw;
+      // max-width: 60vw;
       // flex: 0 0 64px;  /* don't grow, don't shrink, stay at 64px width */
   }
   &__track {
@@ -76,5 +76,5 @@
 
 .carousel {
     max-width: 60vw;
-    flex: 0 1 0;
+    // flex: 0 1 0;
 }
