--- a/client/src/Pages/Mood/Mood.scss
+++ b/client/src/Pages/Mood/Mood.scss
@@ -1,12 +1,13 @@
 .mood {
   width: 100%;
-  background-color: #f2f2f2;
-  display: flex;
-  flex-direction: column;
+  background-color: #393939;
+  flex: 1;
 
   &__header {
     margin-top: 4rem;
+    margin-bottom: 4rem;
     text-align: center;
+    color: white;
   }
 
   &__selection-list {
